# studify-backend

./: Dockerfile  alembic-revision-autogenerate.sh  alembic-upgrade-head.sh  alembic.ini  docker-compose-frog.yaml  docker-compose-mikrus.yaml  docker-compose-prod.yaml  docker-compose.yaml  docker-compose_prod.yaml  pyproject.toml  req.txt
alembic/: env.py
alembic/versions/: 2025-03-09_create_post_table.py  2025-03-28_create_schedule.py  2025-04-29_schedules_table_create.py  2025-04-29_schedules_table_create_timezne.py  2025-10-01_create_schedules_files_table.py  2026-02-16_section_to_str.py
src/: config.py  database.py  main.py  models.py  selectors.py
src/app/: config.py  models.py  router.py  schemas.py  selectors.py  services.py
src/health_check/: router.py  services.py
static/: output.css  output.css.map  style.scss
templates/: index.html  mail.html
vault/: vault_settings.py
