[project]
name = "backend"
version = "0.1.0"
description = "Backend for the studify app"
authors = [
    {name = "Michał Wrona",email = "wronamichal01@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
