[project]
name = "backend"
version = "0.1.0"
description = "Backend for the studify app"
authors = [
    {name = "Michał Wrona",email = "wronamichal01@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "psycopg[binary] (>=3.2.5,<4.0.0)",
    "ruff (>=0.9.10,<0.10.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)",
    "hvac (>=2.3.0,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "ics (>=0.7.2,<0.8.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "fastapi-mail (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py313']
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

